--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gsap": "^3.13.0",
     "i18next": "^25.6.2",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
