chore: manifest updated

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TanStack App",
-  "name": "Create TanStack App Sample",
+  "short_name": "Invescore - New Year",
+  "name": "Invescore - New Year",
   "icons": [
     {
       "src": "favicon.ico",
