--- a/package.json
+++ b/package.json
@@ -21,19 +21,16 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "gsap": "^3.13.0",
     "i18next": "^25.6.2",
     "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-i18next": "^16.3.3",
     "react-markdown": "^10.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
-    "uilab-core": "^0.1.9"
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
